k8s/immich/immich-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    name: immich
