k8s/immich/immich-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: kube-system
  hostnames:
  - immich.k8s.oliverilp.ee
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: immich-server
      port: 2283
